--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,13 @@
-version = 2.7.5
+version = 3.1.2
+runner.dialect=scala213
+project.git=true
+
+align.preset = none
+align.stripMargin = true
+docstrings.style = Asterisk
+maxColumn = 120
+newlines.source = keep
+continuationIndent.defnSite = 2
+danglingParentheses.callSite = true
+assumeStandardLibraryStripMargin = true
+rewrite.rules = [SortImports, RedundantBraces, RedundantParens, SortModifiers]
